--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "front-end-boilerplate",
+  "name": "ssa-academy",
   "version": "1.0.0",
   "description": "",
   "main": "gulpfile.js",
@@ -35,8 +35,10 @@
     "gulp-jshint": "^2.0.1",
     "gulp-livereload": "^3.8.1",
     "gulp-notify": "^2.2.0",
+    "gulp-preprocess": "^2.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-ruby-sass": "^2.0.6",
+    "gulp-sourcemaps": "^2.4.1",
     "gulp-uglify": "^1.5.3"
   }
 }
